<resources>
    <string name="app_name">PolyBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Tên đăng nhập</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--Login-->
    <string name="lg_password">Nhập mật khẩu</string>
    <string name="lg_username">Tên đăng nhập</string>
    <!--Home-->
    <string name="home_user">Người dùng</string>
    <string name="home_book">Sách</string>
    <string name="home_category">Thể loại</string>
    <string name="home_bestseller">Sách bán chạy</string>
    <string name="home_statistic">Thống kê</string>
    <string name="home_bill">Hóa đơn</string>
    <string name="title_activity_list_category">ListCategory</string>
    <string name="title_activity_list_book">ListBook</string>

</resources>
